--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Frontend Mentor | 3-Column Preview Card Component</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
